# sustainable-economic-development-hub

./: .dockerignore  .gitignore  API_USAGE.md  CHANGELOG.md  DATA_CONTRACT.md  DEPLOYMENT.md  Dockerfile  FILES_MODIFIED.md  FINAL_REPORT.md  FIXES_APPLIED.md  GOVERNANCE.md  GO_LIVE_VERIFICATION.md  PHASE_7_8_9_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RELEASE_READINESS.md  STREAMLIT_CLOUD_READY.md  alembic.ini  app.py  diagnostic_check.py  docker-compose.yml  main_api.py  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example  secrets.toml.template
alembic/: env.py  script.py.mako
alembic/versions/: 20260102_0001_initial_schema.py  __init__.py
analytics_hub_platform/: __init__.py
analytics_hub_platform/api/: __init__.py  dashboard_router.py  dependencies.py  docs.py  routers.py
analytics_hub_platform/app/: __init__.py
analytics_hub_platform/config/: __init__.py  branding.py  config.py  constants.py  kpi_catalog.yaml  kpi_register.yaml  theme.py
analytics_hub_platform/data/: __init__.py  repository.py
analytics_hub_platform/domain/: __init__.py  advanced_analytics.py  alert_system.py  indicators.py  insight_engine.py  llm_service.py  maturity_model.py  ml_services.py  model_persistence.py  models.py  services.py
analytics_hub_platform/infra/: __init__.py  database.py  logging.py
analytics_hub_platform/infrastructure/: __init__.py  async_db.py  audit.py  auth.py  caching.py  compliance_checker.py  data_ingestion.py  data_quality.py  db_init.py  exceptions.py  logging_config.py  middleware.py  observability.py  prod_logging.py  rate_limiting.py  repository.py  retry.py  security.py  settings.py  streamlit_auth.py  telemetry.py
analytics_hub_platform/locale/: __init__.py  ar.py  en.py  strings.py
analytics_hub_platform/locales/: __init__.py  ar.py  en.py  strings.py
analytics_hub_platform/ui/: __init__.py  dark_components.py  filters.py  (+8 more)
archive/: app_monolithic.py
data/: __init__.py  excel_importer.py  synthetic_generator.py
docs/: ARCHITECTURE.md  ARCHITECTURE_MAP.md  CONFIGURATION.md  DATA_CONTRACTS.md  DESIGN_GOVERNANCE_CHECKLIST.md  DESIGN_SYSTEM_FOUNDATIONS.md  FIGMA_CONSTRUCTION_GUIDE.md  IMPLEMENTATION_PLAN.md  PROJECT_RULES.md  REDESIGN_PLAN.md  RISK_REGISTER.md  UI_UX_AUDIT.md  UX_CHANGES.md  WORKLOG_2026-01-14.md  design_tokens.figmatokens.json  design_tokens_colors.csv  design_tokens_radius.csv  design_tokens_shadows.csv  design_tokens_spacing.csv  design_tokens_transitions.csv  design_tokens_typography.csv
ml/: __init__.py  anomaly_detection.py  forecasting.py
nginx/: nginx.conf
pages/: 01_Dashboard.py  02_KPIs.py  03_Trends.py  04_Data.py  05_Advanced_Analytics.py  05_Settings.py  06_Help.py  07_Diagnostics.py  08_Data_Management.py  09_Documentation.py  1_📊_Dashboard.py  2_📈_KPIs.py  3_📊_Trends.py  4_📋_Data.py  5_🧠_Advanced_Analytics.py  6_⚙️_Settings.py  99_Design_System.py
scripts/: __init__.py  audit_unused.py  check_deployment.py  deploy.ps1  deploy.sh  format_lint.ps1  init_db.py  run_all.ps1  run_tests.ps1  verify_repo.py
tests/: __init__.py  conftest.py  test_accessibility.py  test_advanced_analytics.py  test_api.py  test_async_db.py  test_auth_integration.py  test_code_quality.py  test_compliance.py  test_config_load.py  test_data_ingestion.py  test_data_quality.py  test_edge_cases.py  test_export_utils.py  test_exports.py  test_external_services.py  test_indicators.py  test_insight_engine.py  test_kpi_calculations.py  test_kpi_utils.py  test_maturity.py  test_ml.py  test_model_persistence.py  test_models.py  test_narratives.py  test_observability.py  test_performance.py  test_rate_limiting.py  test_reliability.py  test_repo_sanity.py  test_repository.py  test_security.py  test_services.py  test_shareable_links.py  test_smoke.py  test_streamlit.py  test_telemetry.py  test_ui_components.py  test_validators.py
(+85 files in other folders)
