[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-hub-platform"
version = "1.0.0"
description = "Sustainable Economic Development Analytics Hub - Ministry of Economy and Planning"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Eng. Sultan Albuqami", email = "sultan_mutep@hotmail.com"}
]
keywords = ["analytics", "sustainability", "economic-development", "dashboard", "kpi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Government/Agencies",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web frameworks
    "streamlit>=1.28.0,<2.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    
    # Data processing
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    
    # Visualization
    "plotly>=5.18.0,<6.0.0",
    "altair>=5.0.0,<6.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    
    # Export/Reporting
    "reportlab>=4.0.0,<5.0.0",
    "python-pptx>=0.6.21,<1.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "xlsxwriter>=3.1.0,<4.0.0",
    
    # Configuration & Validation
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # HTTP client
    "httpx>=0.25.0,<1.0.0",
    
    # ML/Data Science
    "scikit-learn>=1.3.0,<2.0.0",
    
    # Security (optional but recommended)
    "python-jose[cryptography]>=3.3.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "ruff>=0.1.0,<1.0.0",
    "black>=23.0.0,<25.0.0",
    "mypy>=1.6.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

# Async database support
async = [
    "asyncpg>=0.29.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
]

# Database migrations
migrations = [
    "alembic>=1.13.0,<2.0.0",
]

# E2E testing
e2e = [
    "playwright>=1.40.0,<2.0.0",
    "pytest-playwright>=0.4.0,<1.0.0",
]

# All optional dependencies
all = [
    "analytics-hub-platform[dev,async,migrations,e2e]",
]

[project.scripts]
analytics-hub = "analytics_hub_platform.app:main"
analytics-api = "analytics_hub_platform.main_api:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics_hub_platform*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["analytics_hub_platform"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | __pycache__
    | dist
    | build
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["analytics_hub_platform"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
